<resources>
    <!-- General -->
    <string name="app_name">Help School</string>
    <!-- Activity Login -->
    <string name="login_field_username">Usuario</string>
    <string name="login_field_password">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <!-- Fragmemt Profile -->
    <string name="profile_username">Usuario</string>
    <string name="profile_fullname">Nombre</string>
    <string name="profile_email">Email</string>
    <string name="profile_job">Puesto</string>
    <string name="profile_logout">Salir</string>


    <!-- Validar -->
    <string name="title_activity_list_request">ListRequestActivity</string>
    <string name="title_profile">Perfil</string>
    <string name="title_do_request">Consultar</string>
    <string name="title_list_request">General</string>
    <string name="title_historical">Historial</string>
    <string name="title_main">Login</string>
    <string name="respond_request">Responder solicitudes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_request">Seleccionar Consulta</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
