<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.moviles.utp.helpschoolapp.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="93dp"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:elevation="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/help_desk_school_black"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/FieldErrorTextNormal"
        app:hintTextAppearance="@style/FieldHintTextNormal"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_field_username"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite2"
            android:textColorHint="@color/colorWhite2"
            android:theme="@style/FieldTextNormal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameWrap"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/FieldErrorTextNormal"
        app:hintTextAppearance="@style/FieldHintTextNormal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameWrap"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorWhite">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_field_password"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite2"
            android:textColorHint="@color/colorWhite2"
            android:theme="@style/FieldTextNormal" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorWhite"
        android:elevation="10dp"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordWrap"
        app:layout_constraintVertical_bias="0.121" />

    <!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="148dp"
        android:layout_height="165dp"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="154dp">

    </android.support.design.widget.CoordinatorLayout>-->

</android.support.constraint.ConstraintLayout>
